--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         it's handy for representing myself
                     </p>
                 </div>
-                <figure><img src="Assets/0119211820.jpg"></figure>
+                <figure><img src="Assets/6-spotted_salamander_1.jpg"></figure>
             </article>
 
             <article>
@@ -88,7 +88,7 @@
                     </p>
                 </div>
                 <figure>
-                <img src="Assets/0119211820.jpg">
+                <img src="Assets/Oak-Toad.jpg">
                 </figure>
             </article>
         </div>
