--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="aboutMe">
             <a name="aboutMe"></a>
-            <p>Brigid is an aspiring web developer. She is currently enrolled in a full-stack web dev course at the University of Oregon. She has a bacherlor's degree in Chinese from Reed College. Her interests include writing (fiction and poetry), music, and tabletop games.
+            <p>Brigid is an aspiring web developer. She is currently enrolled in a full-stack web dev course at the University of Oregon. She has a bachelor's degree in Chinese from Reed College. Her interests include writing (fiction and poetry), music, and tabletop games.
             </p>
             <a name="projects"></a>
         </section>
