fixed some css positioning

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <header>
-    <h1>Brigid</h1>
+    <h1>Brigid Winitsky</h1>
     <nav>
         <ul>
             <li><a href=#aboutMe>about me</a></li>
@@ -23,7 +23,10 @@
     <main>
         <section id="aboutMe">
             <a name="aboutMe"></a>
-            <p>Brigid is an aspiring web developer. She is currently enrolled in a full-stack web dev course at the University of Oregon. She has a bachelor's degree in Chinese from Reed College. Her interests include writing (fiction and poetry), music, and tabletop games.
+            <figure>
+                <img src="Assets/0205211400.jpg">
+            </figure>
+            <p>Brigid Winitsky is an aspiring web developer. She is currently enrolled in a full-stack web dev course at the University of Oregon. She has a bachelor's degree in Chinese from Reed College. Her interests include writing (fiction and poetry), music, and tabletop games.
             </p>
             <a name="projects"></a>
         </section>
@@ -33,7 +36,7 @@
             <section id="projects">
             
             <article>
-                <!-- Link leads to a placeholder HTML file, rather than a deployed application, as I have no applications to link to. -->
+                <!-- Links lead to a placeholder HTML file, rather than a deployed application, as I have no applications to link to. -->
                 <a href="project.html" target="_blank"></a>
                 <div>
                     <h2>
@@ -106,10 +109,10 @@
             </ul>
         </section>
 
-        <div id="resume">
+        <section id="resume">
             <a name="resume"></a>
             RESUME GOES HERE
-        </div>
+        </section>
 
     </main>
 
