fixed resume and readme

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href=#aboutMe>about me</a></li>
             <li><a href=#projects>projects</a></li>
             <li><a href=#contact>contact</a></li>
-            <li><a href=#resume>resume</a></li>
+            <li><a href="resume.html" target="_blank">resume</a></li>
         </ul>
     </nav>
 </header>
@@ -109,15 +109,15 @@
             </ul>
         </section>
 
-        <section id="resume">
+        <!-- <section id="resume">
             <a name="resume"></a>
             RESUME GOES HERE
-        </section>
+        </section> -->
 
     </main>
 
     <footer>
-All content copyright 2021 by Brigid Winitsky unless otherwise specified.
+Made with love and CSS.
     </footer>
     
 </body>
