--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first project</title>
+    <title>project</title>
 </head>
 <body>
     <h2>This is a placeholder page, as I have no deployed web applications to link to.</h2>
