updated for homework

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href=#aboutMe>about me</a></li>
             <li><a href=#projects>projects</a></li>
             <li><a href=#contact>contact</a></li>
-            <li><a href="resume.html" target="_blank">resume</a></li>
+            <li><a href="Assets/Brigid Winitsky resume 2021.pdf" target="_blank">resume</a></li>
         </ul>
     </nav>
 </header>
@@ -37,65 +37,65 @@
             
             <article>
                 <!-- Links lead to a placeholder HTML file, rather than a deployed application, as I have no applications to link to. -->
-                <a href="project.html" target="_blank"></a>
+                <a href="https://pdxbellasaurus.github.io/superheroBirthdayBash/" target="_blank"></a>
                 <div>
                     <h2>
-                        this portfolio page
+                        Famous Birthday Bash
                     </h2>
                     <br>
                     <p>
-                        it's handy for representing myself
+                        A daily horoscope app for fans of history; a collaboration, I wrote the JavaScript
                     </p>
                 </div>
-                <figure><img src="Assets/26231405_10155803271712110_5393052299483476650_n.jpg"></figure>
+                <figure><img src="Assets/tumblr_367b10fb4fd13b5f738786597db82d8c_a006edd8_1280.png"></figure>
             </article>
 
             <article>
-                <a href="project.html" target="_blank"></a>
+                <a href="https://bnemeton.github.io/dailyscheduler/" target="_blank"></a>
                 <div>
                    
                     <h2>
-                        some other project
+                       Work Day Scheduler
                     </h2>
                     <br>
                     <p>
-                        to be determined
+                        A simple calendar app for scheduling your work day
                     </p>
                 </div>
                 <figure>
-                <img src="Assets/gla910a.jpg">
+                <img src="Assets/screencap.png">
                 </figure>
             </article>
 
             <article>
-                <a href="project.html" target="_blank"></a>
+                <a href="https://bnemeton.github.io/weatherapp/" target="_blank"></a>
                 <div>
                     <h2>
-                        yet another project
+                        Weather Lookup
                     </h2>
                     <br>
                     <p>
-                        nothing here either
+                        An app to retrieve local weather forecasts for any city in the world
                     </p>
                 </div>
                 <figure>
-                <img src="Assets/Untitled_Artwork.png">
+                <img src="Assets/screen2.png">
                 </figure>
             </article>
 
             <article>
-                <a href="project.html" target="_blank"></a>
+                <a href="https://bnemeton.github.io/portfolioSite/" target="_blank"></a>
                 <div>
                     <h2>
-                        yep you guessed it 
+                        This portfolio portfolio site
                     </h2>
                     <br>
                     <p>
-                        placeholder text
+                        of course I wrote this site as well
                     </p>
                 </div>
                 <figure>
-                <img src="Assets/Oak-Toad.jpg">
+                <img src="Assets/tumblr_6bdf1f27176f5b4cb7d42e95da949446_31241a22_1280.png">
                 </figure>
             </article>
         </section>
@@ -104,8 +104,10 @@
             <a name="contact"></a>
             <ul>
                 <li>email:<a href="mailto: brigid.nemeton@gmail.com">brigid.nemeton@gmail.com</a></li>
+                <li>phone: 310-650-3967</li>
                 <li>twitter:<a href="https://twitter.com/bnemeton" target="_blank">@bnemeton</a></li>
-                <li>carrd: <a href="https://nemeton.carrd.co/" target="_blank">nemeton.carrd.co</a></li>
+                <li>linkedin: <a href="https://www.linkedin.com/in/brigid-winitsky-396994209/">https://www.linkedin.com/in/brigid-winitsky-396994209/</a></li>
+                <!-- <li>carrd: <a href="https://nemeton.carrd.co/" target="_blank">nemeton.carrd.co</a></li> -->
             </ul>
         </section>
 
