--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <a href="https://bnemeton.github.io/portfolioSite/" target="_blank"></a>
                 <div>
                     <h2>
-                        This portfolio portfolio site
+                        This portfolio site
                     </h2>
                     <br>
                     <p>
